// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #ef5774;
  font-weight: 700;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 40px;
  width: 40px;
  min-width: 40px;
  min-height: 40px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <span>
       This text is quite long. 
    </span>
  </div>
</DocumentFragment>
`;

exports[`Alert renders with different icon size 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #ef5774;
  font-weight: 700;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <span>
       This text is quite long.
    </span>
  </div>
</DocumentFragment>
`;

exports[`Alert renders with variant info 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #3f6ed8;
  font-weight: 700;
}

.emotion-1 {
  fill: #3f6ed8;
  vertical-align: middle;
  height: 40px;
  width: 40px;
  min-width: 40px;
  min-height: 40px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <span>
       This text is quite long.
    </span>
  </div>
</DocumentFragment>
`;

exports[`Alert renders with variant success & icon lock 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #3f6ed8;
  font-weight: 700;
}

.emotion-1 {
  fill: #3f6ed8;
  vertical-align: middle;
  height: 40px;
  width: 40px;
  min-width: 40px;
  min-height: 40px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
      />
    </svg>
    <span>
      This text is quite long.
    </span>
  </div>
</DocumentFragment>
`;

exports[`Alert renders with variant success 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #45d6b5;
  font-weight: 700;
}

.emotion-1 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 40px;
  width: 40px;
  min-width: 40px;
  min-height: 40px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
      />
    </svg>
    <span>
       This text is quite long.
    </span>
  </div>
</DocumentFragment>
`;

exports[`Alert renders with variant warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #ef5774;
  font-weight: 700;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 40px;
  width: 40px;
  min-width: 40px;
  min-height: 40px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

<div
    class="emotion-0"
    role="alert"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <span>
       This text is quite long.
    </span>
  </div>
</DocumentFragment>
`;
